--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="heading">
+            <h1 id="title">Metric/Imperial Unit Conversion</h1>
+            <input id="input-el" type="number" placeholder="0">
+            <button>Convert</button>
+        </div>
+        <div id="conversions">
+            <div class="conversion" id="length-conversion">
+                <h3 id="length-title">Length (Meter/Feet)</h3>
+                <p id="length-values"></p>
+            </div>
+            <div class="conversion" id="volume-conversion">
+                <h3 id="volume-title">Volume (Liters/Gallons)</h3>
+                <p id="volume-values"></p>
+            </div>
+            <div class="conversion" id="mass-conversion">
+                <h3 id="mass-title">Mass (Kilograms/Pounds)</h3>
+                <p id="mass-values"></p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
