--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Unit Converter</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
         <div class="heading">
             <h1 id="title">Metric/Imperial Unit Conversion</h1>
             <input id="input-el" type="number" placeholder="0">
-            <button>Convert</button>
+            <button id="convert-btn">Convert</button>
         </div>
         <div id="conversions">
             <div class="conversion" id="length-conversion">
@@ -28,5 +29,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
