--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap" rel="stylesheet">
     <title>Unit Converter</title>
 </head>
 <body>
@@ -16,15 +19,15 @@
         </div>
         <div id="conversions">
             <div class="conversion" id="length-conversion">
-                <h3 id="length-title">Length (Meter/Feet)</h3>
+                <h3 class="conversion-title">Length (Meter/Feet)</h3>
                 <p id="length-values"></p>
             </div>
             <div class="conversion" id="volume-conversion">
-                <h3 id="volume-title">Volume (Liters/Gallons)</h3>
+                <h3 class="conversion-title">Volume (Liters/Gallons)</h3>
                 <p id="volume-values"></p>
             </div>
             <div class="conversion" id="mass-conversion">
-                <h3 id="mass-title">Mass (Kilograms/Pounds)</h3>
+                <h3 class="conversion-title">Mass (Kilograms/Pounds)</h3>
                 <p id="mass-values"></p>
             </div>
         </div>
